remove unused functions and add some api docs
